@@ -1,1 +1,1 @@
-Search.setIndex({objects:{"mnemosyne.libmnemosyne.render_chain.RenderChain":{render_question:[4,1,1,""],component_type:[4,2,1,""],unregister_filter:[4,1,1,""],register_filter:[4,1,1,""],register_filter_at_front:[4,1,1,""],register_filter_at_back:[4,1,1,""],renderers:[4,2,1,""],filter:[4,1,1,""],filters:[4,2,1,""],renderer_for_card_type:[4,1,1,""],render_answer:[4,1,1,""],register_renderer:[4,1,1,""],id:[4,2,1,""],unregister_renderer:[4,1,1,""]},"mnemosyne.libmnemosyne.component.Component":{activate:[6,1,1,""],LATER:[6,2,1,""],plugins:[6,1,1,""],review_widget:[6,1,1,""],log:[6,1,1,""],render_chain:[6,1,1,""],deactivate:[6,1,1,""],flush_sync_server:[6,1,1,""],main_widget:[6,1,1,""],review_controller:[6,1,1,""],stopwatch:[6,1,1,""],start_review:[6,1,1,""],config:[6,1,1,""],card_type_with_id:[6,1,1,""],translator:[6,1,1,""],card_types:[6,1,1,""],scheduler:[6,1,1,""],component_type:[6,2,1,""],database:[6,1,1,""],instantiate:[6,2,1,""],controller:[6,1,1,""],used_for:[6,2,1,""],IMMEDIATELY:[6,2,1,""]},"mnemosyne.libmnemosyne.logger":{Logger:[10,3,1,""]},"mnemosyne.libmnemosyne":{logger:[10,0,1,""],tag:[11,0,1,""],component:[6,0,1,""],render_chain:[4,0,1,""]},"mnemosyne.libmnemosyne.logger.Logger":{archive_old_log:[10,1,1,""],edited_setting:[10,1,1,""],activate:[10,1,1,""],deleted_fact:[10,1,1,""],edited_media_file:[10,1,1,""],edited_fact:[10,1,1,""],added_tag:[10,1,1,""],added_criterion:[10,1,1,""],deactivate:[10,1,1,""],stopped_program:[10,1,1,""],log_index_of_last_upload:[10,1,1,""],started_program:[10,1,1,""],added_fact_view:[10,1,1,""],deleted_card:[10,1,1,""],added_fact:[10,1,1,""],deleted_card_type:[10,1,1,""],start_logging:[10,1,1,""],deleted_tag:[10,1,1,""],dump_to_science_log:[10,1,1,""],edited_criterion:[10,1,1,""],started_scheduler:[10,1,1,""],added_card_type:[10,1,1,""],edited_fact_view:[10,1,1,""],deleted_media_file:[10,1,1,""],timestamp:[10,2,1,""],get_timestamp:[10,1,1,""],saved_database:[10,1,1,""],loaded_database:[10,1,1,""],repetition:[10,1,1,""],set_timestamp:[10,1,1,""],component_type:[10,2,1,""],deleted_fact_view:[10,1,1,""],edited_tag:[10,1,1,""],added_card:[10,1,1,""],deleted_criterion:[10,1,1,""],edited_card_type:[10,1,1,""],added_media_file:[10,1,1,""],edited_card:[10,1,1,""]},"mnemosyne.libmnemosyne.component":{Component:[6,3,1,""]},"mnemosyne.libmnemosyne.render_chain":{RenderChain:[4,3,1,""]},"mnemosyne.libmnemosyne.tag":{Tag:[11,3,1,""]}},terms:{represent:[0,4],all:[0,6,11],code:[0,6],chain:4,renderer_class:4,sync_serv:6,unregister_render:4,added_tag:10,scheduler_nam:10,program:[0,6],swap:0,under:6,sent:[0,4],deactiv:[6,10],liter:[2,1,3,4,5,6,7,8,9,10,11],string:4,fals:4,card_type_widget:6,logupload:[0,7],veri:4,recip:0,level:[0,11],gui:0,component_manag:[10,6,4],list:[0,6,4],initialis:6,sync:[6,10,11],past:10,pass:[0,6],index:0,lazili:6,abl:10,current:10,"new":[0,4],method:6,widget:6,full:11,deriv:[0,6],gener:0,here:6,path:[0,4],becom:6,sinc:0,valu:0,wait:6,search:0,set_timestamp:10,register_filter_at_front:4,chang:[0,6],scheduled_count:10,control:[0,6],writer:[0,4],extra:0,appli:[0,11],modul:0,render_quest:4,filenam:10,mobil:6,dangl:6,unit:0,from:[0,6,4,10],regist:[6,4],two:0,added_fact_view:10,call:[0,6],criteria:11,type:[0,6,4],more:[0,6],render_answ:4,hold:6,cach:6,fly:10,none:[6,10,11],word:0,"__untagged__":11,restor:6,work:[0,6],histori:10,added_criterion:10,obvious:10,can:[0,6,4,11,10],thinking_tim:10,filter_class:4,overrid:[6,10],process:0,indic:0,tag:[0,10,11],want:4,loaded_databas:10,libmnemosyn:[0,6,4,11,10],alwai:[0,6],write:0,how:0,criterion:[0,6,10],sever:0,answer:[0,4],instead:4,start_review:6,config:6,generic_card_type_widget:6,dialog:6,component_typ:[10,6,4],constructor:6,befor:[0,6,4],associ:0,review_control:6,card_type_convert:6,obsolet:6,register_filt:4,inform:0,cardtyp:[0,1],allow:11,mechan:0,first:[0,4],order:[0,4],frontend:0,becaus:6,through:[0,4],hierarchi:11,flexibl:0,mnemosyn:[10,6,4,11],added_fact:10,main:6,easier:0,render_arg:4,them:[0,6],thei:6,handl:0,timestamp:10,mention:0,front:4,userid_index:10,name:[10,4,11],anyth:6,separ:11,each:[0,6],side:0,mean:[6,4],our:10,happen:[6,10],out:0,shown:0,deleted_fact:10,statisticspag:[8,0],content:0,suitabl:[0,4],rel:[0,4],deleted_fact_view:10,statist:0,after:4,differ:[0,11],standard:0,reason:[6,11],base:6,card:[0,6,4,11,10],could:[6,11],filter:[0,6,4],deleted_media_fil:10,edited_criterion:10,oper:[0,4],render:[0,6,4],independ:0,number:0,hook:[0,6],alreadi:[6,4],done:6,fact_view:10,given:11,data:[0,4],userid_machineid_index:10,store:[6,10],relationship:6,copi:10,added_media_fil:10,pronunci:0,provid:6,start_log:10,reus:6,in_front:4,statistics_pag:6,typic:[0,6],browser:[0,4],pre:[2,1,3,4,5,6,7,8,9,10,11],edited_media_fil:10,cardtypeconvert:0,raw:[0,4],have:[6,10],tabl:0,need:[0,6,4,10],bz2:10,self:10,also:0,exampl:0,take:6,which:[0,6,4],sure:6,normal:0,object:11,get_timestamp:10,most:6,"class":[2,1,3,4,5,6,7,8,9,10,11],latex:0,"_timestamp":10,don:10,later:6,doe:4,determin:[0,10],"_id":11,fact:[0,10],text:[0,4],register_filter_at_back:4,session:6,xml:11,absolut:0,onli:[6,10],configur:[0,10,5],activ:[0,6,10],enough:10,should:[10,6,4],folder:10,overwritten:6,get:[0,4],"import":[10,4],actual_interv:10,integr:0,contain:[0,4],where:0,set:0,renderchain:[0,4],edited_set:10,close:6,review_widget:6,still:6,databas:[0,6,10,11],review:[0,6],particip:0,started_program:10,written:0,won:0,between:[6,10],deleted_tag:10,kei:10,plugin:[9,6,4,0],foreign:0,added_card:10,instanc:[6,4],context:6,logic:0,mani:[0,6,4],fileformat:[0,2],archive_old_log:10,point:0,instanti:6,overview:0,vain:6,shutdown:6,componentmanag:0,devic:6,three:0,been:6,compon:[0,6],basic:0,immedi:6,dure:[6,10],convert:0,deleted_card_typ:10,renderer_for_card_typ:4,tagtre:[0,3],repetit:[0,10],those:6,"case":6,therefor:6,saved_databas:10,dump_to_science_log:10,layer:0,toolkit:0,archiv:10,"__init__":6,etc:0,perform:[0,4],make:[0,6],factview:0,same:0,complex:6,version_str:10,card_typ:[10,6,4],edited_fact_view:10,wherea:11,user:[6,10],extern:11,implement:11,expand:[0,4],started_schedul:10,entri:10,client:6,non_memorised_count:10,thi:[0,6,4,11,10],activitycriterion:0,edited_card:10,identifi:11,rest:0,yet:6,add:[0,4,10],schedul:[0,6],stopwatch:[0,6],input:6,logger:[0,10],subsequ:6,format:[6,10],edited_card_typ:10,world:11,apart:6,like:[0,4],specif:[0,4],docutil:[2,1,3,4,5,6,7,8,9,10,11],used_for:6,collect:0,either:[0,4],machine_id:10,manag:6,right:[0,4],back:4,intern:11,"export":[0,4],flush:6,server:6,render_chain:[6,4],log_index_of_last_upload:10,recognit:0,larg:10,refer:6,machin:10,run:4,register_render:4,about:6,actual:[0,6],page:0,edited_tag:10,deleted_criterion:10,added_card_typ:10,backup:6,own:[6,10],effici:[6,11],reviewcontrol:0,storag:0,flush_sync_serv:6,span:[2,1,3,4,5,6,7,8,9,10,11],log:[6,10,11],wai:0,question:[0,4],fast:11,reli:6,includ:11,lot:6,card_type_with_id:6,form:[0,4],link:0,translat:[0,6],untag:11,info:10,consist:0,"default":[10,6,4],access:6,displai:[0,4],otherwis:6,criterion_appli:6,creat:6,certain:[0,6],"abstract":[0,6],active_count:10,file:[0,6,4,11,10],edited_fact:10,assembl:[0,4],stopped_program:10,when:[6,10],detail:[0,4],field:0,other:[0,6,4],main_widget:6,you:10,relat:0,ui_compon:6,consid:10,unregister_filt:4,deleted_card:10,scheduled_interv:10,time:[0,6,4,10],criterionappli:0},objtypes:{"0":"py:module","1":"py:method","2":"py:attribute","3":"py:class"},titles:["Libmnemosyne overview","<tt class=\"docutils literal\"><span class=\"pre\">CardType</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">FileFormat</span></tt>","<tt class=\"docutils literal docutils literal\"><span class=\"pre\">TagTree</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">RenderChain</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Configuration</span></tt>","<tt class=\"docutils literal docutils literal\"><span class=\"pre\">Component</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">LogUploader</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">StatisticsPage</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Plugin</span></tt>","<tt class=\"docutils literal docutils literal\"><span class=\"pre\">Logger</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Tag</span></tt>"],objnames:{"0":["py","module","Python module"],"1":["py","method","Python method"],"2":["py","attribute","Python attribute"],"3":["py","class","Python class"]},filenames:["index","modules/card_type","modules/file_format","modules/tag_tree","modules/render_chain","modules/configuration","modules/component","modules/log_uploader","modules/statistics_page","modules/plugin","modules/logger","modules/tag"]})
+Search.setIndex({objects:{"mnemosyne.libmnemosyne.render_chain.RenderChain":{render_question:[4,1,1,""],component_type:[4,2,1,""],unregister_filter:[4,1,1,""],register_filter:[4,1,1,""],register_filter_at_front:[4,1,1,""],register_filter_at_back:[4,1,1,""],renderers:[4,2,1,""],filter:[4,1,1,""],filters:[4,2,1,""],renderer_for_card_type:[4,1,1,""],render_answer:[4,1,1,""],register_renderer:[4,1,1,""],id:[4,2,1,""],unregister_renderer:[4,1,1,""]},"mnemosyne.libmnemosyne.component.Component":{activate:[6,1,1,""],LATER:[6,2,1,""],plugins:[6,1,1,""],review_widget:[6,1,1,""],log:[6,1,1,""],render_chain:[6,1,1,""],deactivate:[6,1,1,""],flush_sync_server:[6,1,1,""],main_widget:[6,1,1,""],review_controller:[6,1,1,""],stopwatch:[6,1,1,""],start_review:[6,1,1,""],config:[6,1,1,""],card_type_with_id:[6,1,1,""],translator:[6,1,1,""],card_types:[6,1,1,""],scheduler:[6,1,1,""],component_type:[6,2,1,""],database:[6,1,1,""],instantiate:[6,2,1,""],controller:[6,1,1,""],used_for:[6,2,1,""],IMMEDIATELY:[6,2,1,""]},"mnemosyne.libmnemosyne.logger":{Logger:[10,3,1,""]},"mnemosyne.libmnemosyne":{logger:[10,0,1,""],tag:[11,0,1,""],component:[6,0,1,""],render_chain:[4,0,1,""]},"mnemosyne.libmnemosyne.logger.Logger":{archive_old_log:[10,1,1,""],edited_setting:[10,1,1,""],activate:[10,1,1,""],deleted_fact:[10,1,1,""],edited_media_file:[10,1,1,""],edited_fact:[10,1,1,""],added_tag:[10,1,1,""],added_criterion:[10,1,1,""],deactivate:[10,1,1,""],stopped_program:[10,1,1,""],log_index_of_last_upload:[10,1,1,""],started_program:[10,1,1,""],added_fact_view:[10,1,1,""],deleted_card:[10,1,1,""],added_fact:[10,1,1,""],deleted_card_type:[10,1,1,""],start_logging:[10,1,1,""],deleted_tag:[10,1,1,""],dump_to_science_log:[10,1,1,""],edited_criterion:[10,1,1,""],started_scheduler:[10,1,1,""],added_card_type:[10,1,1,""],edited_fact_view:[10,1,1,""],deleted_media_file:[10,1,1,""],timestamp:[10,2,1,""],get_timestamp:[10,1,1,""],saved_database:[10,1,1,""],loaded_database:[10,1,1,""],repetition:[10,1,1,""],set_timestamp:[10,1,1,""],component_type:[10,2,1,""],deleted_fact_view:[10,1,1,""],edited_tag:[10,1,1,""],added_card:[10,1,1,""],deleted_criterion:[10,1,1,""],edited_card_type:[10,1,1,""],added_media_file:[10,1,1,""],edited_card:[10,1,1,""]},"mnemosyne.libmnemosyne.component":{Component:[6,3,1,""]},"mnemosyne.libmnemosyne.render_chain":{RenderChain:[4,3,1,""]},"mnemosyne.libmnemosyne.tag":{Tag:[11,3,1,""]}},terms:{represent:[0,4],all:[0,6,11],code:[0,6],chain:4,renderer_class:4,sync_serv:6,unregister_render:4,added_tag:10,scheduler_nam:10,program:[0,6],swap:0,under:6,sent:[0,4],deactiv:[6,10],liter:[2,1,3,4,5,6,7,8,9,10,11],string:4,fals:4,card_type_widget:6,logupload:[0,7],veri:4,recip:0,level:[0,11],gui:0,component_manag:[10,6,4],list:[0,6,4],initialis:6,sync:[6,10,11],past:10,pass:[0,6],index:0,lazili:6,abl:10,current:10,"new":[0,4],method:6,widget:6,full:11,deriv:[0,6],gener:0,here:6,path:[0,4],becom:6,sinc:0,valu:0,wait:6,search:0,set_timestamp:10,register_filter_at_front:4,implement:11,scheduled_count:10,control:[0,6],writer:[0,4],extra:0,appli:[0,11],modul:0,render_quest:4,filenam:10,mobil:6,dangl:6,unit:0,from:[0,6,4,10],regist:[6,4],two:0,added_fact_view:10,call:[0,6],criteria:11,type:[0,6,4],more:[0,6],render_answ:4,hold:6,cach:6,fly:10,none:[6,10,11],word:0,"__untagged__":11,restor:6,work:[0,6],histori:10,added_criterion:10,obvious:10,can:[0,6,4,11,10],thinking_tim:10,filter_class:4,overrid:[6,10],process:0,indic:0,tag:[0,10,11],want:4,loaded_databas:10,libmnemosyn:[0,6,4,11,10],alwai:[0,6],write:0,how:0,criterion:[0,6,10],sever:0,answer:[0,4],instead:4,start_review:6,config:6,generic_card_type_widget:6,deleted_criterion:10,constructor:6,befor:[0,6,4],data:[0,4],review_control:6,card_type_convert:6,obsolet:6,register_filt:4,inform:0,cardtyp:[0,1],allow:11,mechan:0,edited_criterion:10,order:[0,4],frontend:0,becaus:6,through:[0,4],hierarchi:11,flexibl:0,mnemosyn:[10,6,4,11],added_fact:10,main:6,easier:0,render_arg:4,them:[0,6],thei:6,handl:0,timestamp:10,mention:0,front:4,userid_index:10,name:[10,4,11],anyth:6,separ:11,each:[0,6],side:0,mean:[6,4],our:10,happen:[6,10],out:0,shown:0,deleted_fact:10,statisticspag:[8,0],content:0,suitabl:[0,4],rel:[0,4],deleted_fact_view:10,integr:0,after:4,differ:[0,11],standard:0,reason:[6,11],base:6,card:[0,6,4,11,10],could:[6,11],filter:[0,6,4],deleted_media_fil:10,first:[0,4],oper:[0,4],render:[0,6,4],independ:0,number:0,hook:[0,6],alreadi:[6,4],done:6,fact_view:10,given:11,associ:0,userid_machineid_index:10,store:[6,10],relationship:6,copi:10,added_media_fil:10,pronunci:0,provid:6,start_log:10,reus:6,in_front:4,statistics_pag:6,typic:[0,6],browser:[0,4],pre:[2,1,3,4,5,6,7,8,9,10,11],edited_media_fil:10,cardtypeconvert:0,raw:[0,4],have:[6,10],tabl:0,need:[0,6,4,10],bz2:10,self:10,also:0,exampl:0,take:6,which:[0,6,4],sure:6,normal:0,object:11,get_timestamp:10,most:6,"class":[2,1,3,4,5,6,7,8,9,10,11],latex:0,"_timestamp":10,don:10,later:6,doe:4,determin:[0,10],"_id":11,fact:[0,10],text:[0,4],register_filter_at_back:4,session:6,xml:11,absolut:0,onli:[6,10],configur:[0,10,5],activ:[0,6,10],enough:10,should:[10,6,4],folder:10,overwritten:6,get:[0,4],convert:0,deleted_tag:10,actual_interv:10,statist:0,contain:[0,4],where:0,set:0,renderchain:[0,4],edited_set:10,close:6,review_widget:6,still:6,databas:[0,6,10,11],review:[0,6],particip:0,started_program:10,written:0,won:0,between:[6,10],"import":[10,4],kei:10,plugin:[9,6,4,0],foreign:0,added_card:10,instanc:[6,4],context:6,logic:0,mani:[0,6,4],fileformat:[0,2],archive_old_log:10,point:0,instanti:6,overview:0,vain:6,shutdown:6,componentmanag:0,devic:6,three:0,been:6,compon:[0,6],basic:0,immedi:6,"abstract":[0,6],component_typ:[10,6,4],deleted_card_typ:10,input:6,tagtre:[0,3],repetit:[0,10],those:6,"case":6,therefor:6,saved_databas:10,dump_to_science_log:10,layer:0,toolkit:0,archiv:10,"__init__":6,etc:0,perform:[0,4],make:[0,6],factview:0,same:0,complex:6,version_str:10,card_typ:[10,6,4],edited_fact_view:10,wherea:11,user:[6,10],extern:11,chang:[0,6],expand:[0,4],started_schedul:10,entri:10,client:6,non_memorised_count:10,thi:[0,6,4,11,10],activitycriterion:0,edited_card:10,identifi:11,rest:0,yet:6,add:[0,4,10],schedul:[0,6],stopwatch:[0,6],renderer_for_card_typ:4,logger:[0,10],subsequ:6,format:[6,10],edited_card_typ:10,world:11,apart:6,like:[0,4],specif:[0,4],docutil:[2,1,3,4,5,6,7,8,9,10,11],used_for:6,collect:0,either:[0,4],machine_id:10,manag:6,right:[0,4],back:4,intern:11,"export":[0,4],flush:6,server:6,render_chain:[6,4],log_index_of_last_upload:10,recognit:0,larg:10,refer:6,machin:10,run:4,register_render:4,about:6,actual:[0,6],page:0,edited_tag:10,dialog:6,added_card_typ:10,backup:6,own:[6,10],effici:[6,11],reviewcontrol:0,storag:0,flush_sync_serv:6,span:[2,1,3,4,5,6,7,8,9,10,11],log:[6,10,11],wai:0,question:[0,4],fast:11,reli:6,includ:11,lot:6,card_type_with_id:6,form:[0,4],link:0,translat:[0,6],untag:11,info:10,consist:0,"default":[10,6,4],access:6,displai:[0,4],otherwis:6,criterion_appli:6,creat:6,certain:[0,6],dure:[6,10],active_count:10,file:[0,6,4,11,10],edited_fact:10,assembl:[0,4],stopped_program:10,when:[6,10],detail:[0,4],field:0,other:[0,6,4],main_widget:6,you:10,relat:0,ui_compon:6,consid:10,unregister_filt:4,deleted_card:10,scheduled_interv:10,time:[0,6,4,10],criterionappli:0},objtypes:{"0":"py:module","1":"py:method","2":"py:attribute","3":"py:class"},titles:["Libmnemosyne overview","<tt class=\"docutils literal\"><span class=\"pre\">CardType</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">FileFormat</span></tt>","<tt class=\"docutils literal docutils literal\"><span class=\"pre\">TagTree</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">RenderChain</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Configuration</span></tt>","<tt class=\"docutils literal docutils literal\"><span class=\"pre\">Component</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">LogUploader</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">StatisticsPage</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Plugin</span></tt>","<tt class=\"docutils literal docutils literal\"><span class=\"pre\">Logger</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Tag</span></tt>"],objnames:{"0":["py","module","Python module"],"1":["py","method","Python method"],"2":["py","attribute","Python attribute"],"3":["py","class","Python class"]},filenames:["index","modules/card_type","modules/file_format","modules/tag_tree","modules/render_chain","modules/configuration","modules/component","modules/log_uploader","modules/statistics_page","modules/plugin","modules/logger","modules/tag"]})
